--- a/ssl_website/users/templates/signup.html
+++ b/ssl_website/users/templates/signup.html
@@ -7,12 +7,11 @@
             <div class="card-header">Зарегистрироваться</div>
             <div class="card-body">
 
-                    {% for error in form.errors %}
-                        <div class="alert alert-danger" role="alert">
-                            {{ error | escape  }}
-                        </div>
-                    {% endfor %}
-
+<!--                    {% for error in form.errors %}-->
+<!--                        <div class="alert alert-danger" role="alert">-->
+<!--                            {{ error | escape  }}-->
+<!--                        </div>-->
+<!--                    {% endfor %}-->
 
                 <form method="post" action="{% url 'users:signup' %}">
                     {% csrf_token %}
@@ -22,8 +21,9 @@
                                 <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}{% if field.field.required %}<span class="required">*</span>{% endif %}</label>
                                 <div class="col-md-6">
                                     {{ field }}
-                                    {% if field.help_text %}
-                                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+                                    {% if field.errors %}
+<!--                                    <span class="input-group-text" id="inputGroupPrepend">@</span>-->
+                                    <small id="{{ field.id_for_label }}-help" class="alert-danger">{{ field.errors | striptags }}</small>
                                     {% endif %}
                                 </div>
                         </div>
