--- a/ssl_website/templates/nav.html
+++ b/ssl_website/templates/nav.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand" href="/"><span style="color:blue">SSL</span></a>
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
-        Пользователь: {{ user.username }}.
+        Пользователь: {{ user.email }}.
         <a class="p-2 text-dark" href="{% url 'password_change' %}">Изменить пароль</a>
         <a class="p-2 text-dark" href="{% url 'users:profile_settings' %}">Настройки профиля</a>
         <a class="p-2 text-dark" href="{% url 'logout' %}">Выйти</a>
