user_model updated again + drf will be used for work

--- a/ssl_website/users/templates/registration/login.html
+++ b/ssl_website/users/templates/registration/login.html
@@ -14,7 +14,7 @@
 
         {% if next %}            
             <div class="alert alert-info" role="alert">
-              Вы обратились к странице, доступ к которой возможен только для менторов.<br>
+              Вы обратились к странице, доступ к которой возможен только для авторизированных пользователей.<br>
               Пожалуйста, авторизуйтесь.
             </div>
         {% else %}
