registration edited (image and accept of conditions added). need to edit email sending (to save user after it)

--- a/ssl_website/templates/nav.html
+++ b/ssl_website/templates/nav.html
@@ -3,10 +3,10 @@
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
         Пользователь: {{ user.email }}. |
-        <a class="p-2 text-dark" href="{% url 'users:logout' %}">Выйти</a>
+<!--        <a class="p-2 text-dark" href="{% url 'users:logout' %}">Выйти</a>-->
         {% else %}
-        <a class="p-2 text-dark" href="{% url 'users:login' %}">Войти</a> |
-        <a class="p-2 text-dark" href="{% url 'users:registration' %}">Регистрация</a>
+<!--        <a class="p-2 text-dark" href="{% url 'users:login' %}">Войти</a> |-->
+<!--        <a class="p-2 text-dark" href="{% url 'users:registration' %}">Регистрация</a>-->
         {% endif %}
     </nav>
 </nav>
